mik-sql-macros/tests/ui/sql/unknown_operator.stderr
error: Unknown operator '$unknown'. Valid operators: $eq, $ne, $gt, $gte, $lt, $lte, $in, $nin, $like, $ilike, $regex, $startsWith, $endsWith, $contains, $between
 --> tests/ui/sql/unknown_operator.rs:7:28
  |
7 |         filter: { name: { $unknown: "test" } },
  |                            ^^^^^^^
